--- a/index.html
+++ b/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fotos</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <p>hola mundo</p>
+    <header class="Menu">
+        <h1>Las mejores fotos de stock gratis, imágenes libres de regalías y vídeos compartidos por creadores.</h1>
+    
+        <form action="unete.html" method="get">
+            <button type="submit">Únete</button>
+        </form>
+    </header>
+
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\EIUN5658.jpg" alt="Piñata" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FEWC1384.jpg" alt="Equipo club" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FKXC1532.jpg" alt="Comiendo" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\flash emblema.jpg" alt="flash emblema" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FLASH.jpg" alt="flash" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\github foto.jpg" alt="Yo Grande" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\grupo de danza.jpg" alt="Grupo de danza" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\HGWB6046.jpg" alt="Acapulco" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0084.jpg" alt="balon" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0091.jpg" alt="Los 4" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0109.jpg" alt="Bale" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0111.jpg" alt="Fondo pantalla" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0644.jpg" alt="Estrella Kelly" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_1791.jpg" alt="Yo sentado" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2341.jpg" alt="seleccion 5to" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2380.jpg" alt="XV Mora" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2429.jpg" alt="Emi" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2432.jpg" alt="Volpi" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2447.jpg" alt="bebe saltando" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3774.jpg" alt="Pat" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3978.png" alt="campeones" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4136.jpg" alt="Luis Fer" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4193.jpg" alt="Fenomeno" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_5100.jpg" alt="Flas ByN" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E2284.jpg" alt="sportacus" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E5210.jpg" alt="club de cuervos" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\kinder.jpeg" alt="Kinder" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\lobos.png" alt="Lobos" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\primera comunión.jpeg" alt="Primera comunion" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos.jpg" alt="Rayos" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos2.jpg" alt="Rayos 2" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\Ronaldo.jpg" alt="Ronaldo" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\the-flash-concept-art.jpg" alt="Flas corriendo" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg" alt="yo saltando" style="width:128px;height:128px;">
+    <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\yo jaja.jpg" alt="yo posando" style="width:128px;height:128px;">
 </body>
 </html>
