--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
     <h1>Las mejores fotos de stock gratis, imágenes libres de regalías y vídeos compartidos por creadores.</h1>
     </header>
     
-    <main>
-        <div id="imagenes">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" style="width:128px;height:128px;">
+    <main class="imagenes">
+        <div>
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2" 
+                style="width:400px;height:600px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" 
+                style="width:400px;height:600px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" 
+                style="width:128px;height:128px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" 
+                style="width:128px;height:128px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" 
+                style="width:128px;height:128px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" 
+                style="width:128px;height:128px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" 
+                style="width:128px;height:128px;">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" 
+                style="width:128px;height:128px;">
             <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\EIUN5658.jpg" alt="Piñata"
                 style="width:128px;height:128px;">
             <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FEWC1384.jpg" alt="Equipo club"
