--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     </header>
     
     <main class="imagenes">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Descubrir</a></li>
+            <li><a href="#">Videos</a></li>
+            <li><a href="#">Lo más visto</a></li>
+            <li><a href="#">Retos</a></li>
+        </ul>
         <div>
             <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2" 
                 style="width:400px;height:600px;">
