--- a/index.html
+++ b/index.html
@@ -35,87 +35,51 @@
             <li><a href="#">Lo más visto</a></li>
             <li><a href="#">Retos</a></li>
         </ul>
-        <div>
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2" 
-                style="width:400px;height:600px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" 
-                style="width:400px;height:600px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" 
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\EIUN5658.jpg" alt="Piñata"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FEWC1384.jpg" alt="Equipo club"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FKXC1532.jpg" alt="Comiendo"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\flash emblema.jpg" alt="flash emblema"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FLASH.jpg" alt="flash" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\github foto.jpg" alt="Yo Grande"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\grupo de danza.jpg" alt="Grupo de danza"
-                style="width:600px;height:400px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\HGWB6046.jpg" alt="Acapulco"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0084.jpg" alt="balon"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0091.jpg" alt="Los 4"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0109.jpg" alt="Bale" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0111.jpg" alt="Fondo pantalla"
-                style="width:400px;height:600px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0644.jpg" alt="Estrella Kelly"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_1791.jpg" alt="Yo sentado"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2341.jpg" alt="seleccion 5to"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2380.jpg" alt="XV Mora"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2429.jpg" alt="Emi" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2432.jpg" alt="Volpi"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2447.jpg" alt="bebe saltando"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3774.jpg" alt="Pat" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3978.png" alt="campeones"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4136.jpg" alt="Luis Fer"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4193.jpg" alt="Fenomeno"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_5100.jpg" alt="Flas ByN"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E2284.jpg" alt="sportacus"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E5210.jpg" alt="club de cuervos"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\kinder.jpeg" alt="Kinder"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\lobos.png" alt="Lobos" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\primera comunión.jpeg" alt="Primera comunion"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos.jpg" alt="Rayos" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos2.jpg" alt="Rayos 2"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\Ronaldo.jpg" alt="Ronaldo"
-                style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\the-flash-concept-art.jpg" alt="Flas corriendo"
-                style="width:128px;height:128px;">
+        <div id="imag">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" >
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\EIUN5658.jpg" alt="Piñata">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FEWC1384.jpg" alt="Equipo club">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FKXC1532.jpg" alt="Comiendo">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\flash emblema.jpg" alt="flash emblema">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FLASH.jpg" alt="flash">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\github foto.jpg" alt="Yo Grande">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\grupo de danza.jpg" alt="Grupo de danza">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\HGWB6046.jpg" alt="Acapulco">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0084.jpg" alt="balon">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0091.jpg" alt="Los 4">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0109.jpg" alt="Bale">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0111.jpg" alt="Fondo pantalla">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0644.jpg" alt="Estrella Kelly">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_1791.jpg" alt="Yo sentado">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2341.jpg" alt="seleccion 5to">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2380.jpg" alt="XV Mora">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2429.jpg" alt="Emi">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2432.jpg" alt="Volpi">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2447.jpg" alt="bebe saltando">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3774.jpg" alt="Pat">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3978.png" alt="campeones">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4136.jpg" alt="Luis Fer">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4193.jpg" alt="Fenomeno">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_5100.jpg" alt="Flas ByN">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E2284.jpg" alt="sportacus">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E5210.jpg" alt="club de cuervos">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\kinder.jpeg" alt="Kinder">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\lobos.png" alt="Lobos">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\primera comunión.jpeg" alt="Primera comunion">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos.jpg" alt="Rayos">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos2.jpg" alt="Rayos 2">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\Ronaldo.jpg" alt="Ronaldo">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\the-flash-concept-art.jpg" alt="Flas corriendo">
             <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
-                alt="yo saltando" style="width:128px;height:128px;">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\yo jaja.jpg" alt="yo posando"
-                style="width:128px;height:128px;">
+                alt="yo saltando">
+            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\yo jaja.jpg" alt="yo posando">
         </div>
     </main>
     
