--- a/index.html
+++ b/index.html
@@ -35,51 +35,51 @@
             <li><a href="#">Lo más visto</a></li>
             <li><a href="#">Retos</a></li>
         </ul>
-        <div id="imag">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 2.jpeg" alt="bebe 2">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebe 3.jpeg" alt="bebe 3" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\bebé.jpg" alt="bebe" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\casa Juan.jpg" alt="Casa Juan" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CJNT8914.jpg" alt="Yayo y Leo" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\CRBA7996.jpg" alt="seleccion 4to" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\dab con Vaca.jpg" alt="dab" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\DOFF9229.jpg" alt="Joy" >
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\EIUN5658.jpg" alt="Piñata">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FEWC1384.jpg" alt="Equipo club">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FKXC1532.jpg" alt="Comiendo">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\flash emblema.jpg" alt="flash emblema">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\FLASH.jpg" alt="flash">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\github foto.jpg" alt="Yo Grande">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\grupo de danza.jpg" alt="Grupo de danza">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\HGWB6046.jpg" alt="Acapulco">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0084.jpg" alt="balon">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0091.jpg" alt="Los 4">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0109.jpg" alt="Bale">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0111.jpg" alt="Fondo pantalla">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_0644.jpg" alt="Estrella Kelly">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_1791.jpg" alt="Yo sentado">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2341.jpg" alt="seleccion 5to">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2380.jpg" alt="XV Mora">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2429.jpg" alt="Emi">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2432.jpg" alt="Volpi">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_2447.jpg" alt="bebe saltando">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3774.jpg" alt="Pat">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_3978.png" alt="campeones">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4136.jpg" alt="Luis Fer">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_4193.jpg" alt="Fenomeno">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_5100.jpg" alt="Flas ByN">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E2284.jpg" alt="sportacus">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\IMG_E5210.jpg" alt="club de cuervos">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\kinder.jpeg" alt="Kinder">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\lobos.png" alt="Lobos">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\primera comunión.jpeg" alt="Primera comunion">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos.jpg" alt="Rayos">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\rayos2.jpg" alt="Rayos 2">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\Ronaldo.jpg" alt="Ronaldo">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\the-flash-concept-art.jpg" alt="Flas corriendo">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
-                alt="yo saltando">
-            <img src="C:\Users\jorsa\Desktop\1er-proyecto_DEV.F\imagenes\yo jaja.jpg" alt="yo posando">
+        <div class="imag">
+            <div class="im"><img src="imagenes\bebe 2.jpeg" alt="bebe 2"></div>
+            <div class="im"><img src="imagenes\bebe 3.jpeg" alt="bebe 3" ></div>
+            <div class="im"><img src="imagenes\bebé.jpg" alt="bebe" ></div>
+            <div class="im"><img src="imagenes\casa Juan.jpg" alt="Casa Juan" ></div>
+            <div class="im"><img src="imagenes\CJNT8914.jpg" alt="Yayo y Leo" ></div>
+            <div class="im"><img src="imagenes\CRBA7996.jpg" alt="seleccion 4to" ></div>
+            <div class="im"><img src="imagenes\dab con Vaca.jpg" alt="dab" ></div>
+            <div class="im"><img src="imagenes\DOFF9229.jpg" alt="Joy" ></div>
+            <div class="im"><img src="imagenes\EIUN5658.jpg" alt="Piñata"></div>
+            <div class="im"><img src="imagenes\FEWC1384.jpg" alt="Equipo club"></div>
+            <div class="im"><img src="imagenes\FKXC1532.jpg" alt="Comiendo"></div>
+            <div class="im"><img src="imagenes\flash emblema.jpg" alt="flash emblema"></div>
+            <div class="im"><img src="imagenes\FLASH.jpg" alt="flash"></div>
+            <div class="im"><img src="imagenes\github foto.jpg" alt="Yo Grande"></div>
+            <div class="im"><img src="imagenes\grupo de danza.jpg" alt="Grupo de danza"></div>
+            <div class="im"><img src="imagenes\HGWB6046.jpg" alt="Acapulco"></div>
+            <div class="im"><img src="imagenes\IMG_0084.jpg" alt="balon"></div>
+            <div class="im"><img src="imagenes\IMG_0091.jpg" alt="Los 4"></div>
+            <div class="im"><img src="imagenes\IMG_0109.jpg" alt="Bale"></div>
+            <div class="im"><img src="imagenes\IMG_0111.jpg" alt="Fondo pantalla"></div>
+            <div class="im"><img src="imagenes\IMG_0644.jpg" alt="Estrella Kelly"></div>
+            <div class="im"><img src="imagenes\IMG_1791.jpg" alt="Yo sentado"></div>
+            <div class="im"><img src="imagenes\IMG_2341.jpg" alt="seleccion 5to"></div>
+            <div class="im"><img src="imagenes\IMG_2380.jpg" alt="XV Mora"></div>
+            <div class="im"><img src="imagenes\IMG_2429.jpg" alt="Emi"></div>
+            <div class="im"><img src="imagenes\IMG_2432.jpg" alt="Volpi"></div>
+            <div class="im"><img src="imagenes\IMG_2447.jpg" alt="bebe saltando"></div>
+            <div class="im"><img src="imagenes\IMG_3774.jpg" alt="Pat"></div>
+            <div class="im"><img src="imagenes\IMG_3978.png" alt="campeones"></div>
+            <div class="im"><img src="imagenes\IMG_4136.jpg" alt="Luis Fer"></div>
+            <div class="im"><img src="imagenes\IMG_4193.jpg" alt="Fenomeno"></div>
+            <div class="im"><img src="imagenes\IMG_5100.jpg" alt="Flas ByN"></div>
+            <div class="im"><img src="imagenes\IMG_E2284.jpg" alt="sportacus"></div>
+            <div class="im"><img src="imagenes\IMG_E5210.jpg" alt="club de cuervos"></div>
+            <div class="im"><img src="imagenes\kinder.jpeg" alt="Kinder"></div>
+            <div class="im"><img src="imagenes\lobos.png" alt="Lobos"></div>
+            <div class="im"><img src="imagenes\primera comunión.jpeg" alt="Primera comunion"></div>
+            <div class="im"><img src="imagenes\rayos.jpg" alt="Rayos"></div>
+            <div class="im"><img src="imagenes\rayos2.jpg" alt="Rayos 2"></div>
+            <div class="im"><img src="imagenes\Ronaldo.jpg" alt="Ronaldo"></div>
+            <div class="im"><img src="imagenes\the-flash-concept-art.jpg" alt="Flas corriendo"></div>
+            <div class="im"><img src="imagenes\thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
+                alt="yo saltando"></div>
+            <div class="im"><img src="imagenes\yo jaja.jpg" alt="yo posando"></div>
         </div>
     </main>
     
