--- a/index.html
+++ b/index.html
@@ -36,50 +36,50 @@
             <li><a href="#">Retos</a></li>
         </ul>
         <div class="imag">
-            <div class="im"><img src="imagenes\bebe 2.jpeg" alt="bebe 2"></div>
-            <div class="im"><img src="imagenes\bebe 3.jpeg" alt="bebe 3" ></div>
-            <div class="im"><img src="imagenes\bebé.jpg" alt="bebe" ></div>
-            <div class="im"><img src="imagenes\casa Juan.jpg" alt="Casa Juan" ></div>
-            <div class="im"><img src="imagenes\CJNT8914.jpg" alt="Yayo y Leo" ></div>
-            <div class="im"><img src="imagenes\CRBA7996.jpg" alt="seleccion 4to" ></div>
-            <div class="im"><img src="imagenes\dab con Vaca.jpg" alt="dab" ></div>
-            <div class="im"><img src="imagenes\DOFF9229.jpg" alt="Joy" ></div>
-            <div class="im"><img src="imagenes\EIUN5658.jpg" alt="Piñata"></div>
-            <div class="im"><img src="imagenes\FEWC1384.jpg" alt="Equipo club"></div>
-            <div class="im"><img src="imagenes\FKXC1532.jpg" alt="Comiendo"></div>
-            <div class="im"><img src="imagenes\flash emblema.jpg" alt="flash emblema"></div>
-            <div class="im"><img src="imagenes\FLASH.jpg" alt="flash"></div>
-            <div class="im"><img src="imagenes\github foto.jpg" alt="Yo Grande"></div>
-            <div class="im"><img src="imagenes\grupo de danza.jpg" alt="Grupo de danza"></div>
-            <div class="im"><img src="imagenes\HGWB6046.jpg" alt="Acapulco"></div>
-            <div class="im"><img src="imagenes\IMG_0084.jpg" alt="balon"></div>
-            <div class="im"><img src="imagenes\IMG_0091.jpg" alt="Los 4"></div>
-            <div class="im"><img src="imagenes\IMG_0109.jpg" alt="Bale"></div>
-            <div class="im"><img src="imagenes\IMG_0111.jpg" alt="Fondo pantalla"></div>
-            <div class="im"><img src="imagenes\IMG_0644.jpg" alt="Estrella Kelly"></div>
-            <div class="im"><img src="imagenes\IMG_1791.jpg" alt="Yo sentado"></div>
-            <div class="im"><img src="imagenes\IMG_2341.jpg" alt="seleccion 5to"></div>
-            <div class="im"><img src="imagenes\IMG_2380.jpg" alt="XV Mora"></div>
-            <div class="im"><img src="imagenes\IMG_2429.jpg" alt="Emi"></div>
-            <div class="im"><img src="imagenes\IMG_2432.jpg" alt="Volpi"></div>
-            <div class="im"><img src="imagenes\IMG_2447.jpg" alt="bebe saltando"></div>
-            <div class="im"><img src="imagenes\IMG_3774.jpg" alt="Pat"></div>
-            <div class="im"><img src="imagenes\IMG_3978.png" alt="campeones"></div>
-            <div class="im"><img src="imagenes\IMG_4136.jpg" alt="Luis Fer"></div>
-            <div class="im"><img src="imagenes\IMG_4193.jpg" alt="Fenomeno"></div>
-            <div class="im"><img src="imagenes\IMG_5100.jpg" alt="Flas ByN"></div>
-            <div class="im"><img src="imagenes\IMG_E2284.jpg" alt="sportacus"></div>
-            <div class="im"><img src="imagenes\IMG_E5210.jpg" alt="club de cuervos"></div>
-            <div class="im"><img src="imagenes\kinder.jpeg" alt="Kinder"></div>
-            <div class="im"><img src="imagenes\lobos.png" alt="Lobos"></div>
-            <div class="im"><img src="imagenes\primera comunión.jpeg" alt="Primera comunion"></div>
-            <div class="im"><img src="imagenes\rayos.jpg" alt="Rayos"></div>
-            <div class="im"><img src="imagenes\rayos2.jpg" alt="Rayos 2"></div>
-            <div class="im"><img src="imagenes\Ronaldo.jpg" alt="Ronaldo"></div>
-            <div class="im"><img src="imagenes\the-flash-concept-art.jpg" alt="Flas corriendo"></div>
-            <div class="im"><img src="imagenes\thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
+            <div class="im"><img src="imagenes/bebe 2.jpeg" alt="bebe 2"></div>
+            <div class="im"><img src="imagenes/bebe 3.jpeg" alt="bebe 3" ></div>
+            <div class="im"><img src="imagenes/bebé.jpg" alt="bebe" ></div>
+            <div class="im"><img src="imagenes/casa Juan.jpg" alt="Casa Juan" ></div>
+            <div class="im"><img src="imagenes/CJNT8914.jpg" alt="Yayo y Leo" ></div>
+            <div class="im"><img src="imagenes/CRBA7996.jpg" alt="seleccion 4to" ></div>
+            <div class="im"><img src="imagenes/dab con Vaca.jpg" alt="dab" ></div>
+            <div class="im"><img src="imagenes/DOFF9229.jpg" alt="Joy" ></div>
+            <div class="im"><img src="imagenes/EIUN5658.jpg" alt="Piñata"></div>
+            <div class="im"><img src="imagenes/FEWC1384.jpg" alt="Equipo club"></div>
+            <div class="im"><img src="imagenes/FKXC1532.jpg" alt="Comiendo"></div>
+            <div class="im"><img src="imagenes/flash emblema.jpg" alt="flash emblema"></div>
+            <div class="im"><img src="imagenes/FLASH.jpg" alt="flash"></div>
+            <div class="im"><img src="imagenes/github foto.jpg" alt="Yo Grande"></div>
+            <div class="im"><img src="imagenes/grupo de danza.jpg" alt="Grupo de danza"></div>
+            <div class="im"><img src="imagenes/HGWB6046.jpg" alt="Acapulco"></div>
+            <div class="im"><img src="imagenes/IMG_0084.jpg" alt="balon"></div>
+            <div class="im"><img src="imagenes/IMG_0091.jpg" alt="Los 4"></div>
+            <div class="im"><img src="imagenes/IMG_0109.jpg" alt="Bale"></div>
+            <div class="im"><img src="imagenes/IMG_0111.jpg" alt="Fondo pantalla"></div>
+            <div class="im"><img src="imagenes/IMG_0644.jpg" alt="Estrella Kelly"></div>
+            <div class="im"><img src="imagenes/IMG_1791.jpg" alt="Yo sentado"></div>
+            <div class="im"><img src="imagenes/IMG_2341.jpg" alt="seleccion 5to"></div>
+            <div class="im"><img src="imagenes/IMG_2380.jpg" alt="XV Mora"></div>
+            <div class="im"><img src="imagenes/IMG_2429.jpg" alt="Emi"></div>
+            <div class="im"><img src="imagenes/IMG_2432.jpg" alt="Volpi"></div>
+            <div class="im"><img src="imagenes/IMG_2447.jpg" alt="bebe saltando"></div>
+            <div class="im"><img src="imagenes/IMG_3774.jpg" alt="Pat"></div>
+            <div class="im"><img src="imagenes/IMG_3978.png" alt="campeones"></div>
+            <div class="im"><img src="imagenes/IMG_4136.jpg" alt="Luis Fer"></div>
+            <div class="im"><img src="imagenes/IMG_4193.jpg" alt="Fenomeno"></div>
+            <div class="im"><img src="imagenes/IMG_5100.jpg" alt="Flas ByN"></div>
+            <div class="im"><img src="imagenes/IMG_E2284.jpg" alt="sportacus"></div>
+            <div class="im"><img src="imagenes/IMG_E5210.jpg" alt="club de cuervos"></div>
+            <div class="im"><img src="imagenes/kinder.jpeg" alt="Kinder"></div>
+            <div class="im"><img src="imagenes/lobos.png" alt="Lobos"></div>
+            <div class="im"><img src="imagenes/primera comunión.jpeg" alt="Primera comunion"></div>
+            <div class="im"><img src="imagenes/rayos.jpg" alt="Rayos"></div>
+            <div class="im"><img src="imagenes/rayos2.jpg" alt="Rayos 2"></div>
+            <div class="im"><img src="imagenes/Ronaldo.jpg" alt="Ronaldo"></div>
+            <div class="im"><img src="imagenes/the-flash-concept-art.jpg" alt="Flas corriendo"></div>
+            <div class="im"><img src="imagenes/thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
                 alt="yo saltando"></div>
-            <div class="im"><img src="imagenes\yo jaja.jpg" alt="yo posando"></div>
+            <div class="im"><img src="imagenes/yo jaja.jpg" alt="yo posando"></div>
         </div>
     </main>
     
