--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="imag">
             <div class="im"><img src="imagenes/bebe 2.jpeg" alt="bebe 2"></div>
             <div class="im"><img src="imagenes/bebe 3.jpeg" alt="bebe 3" ></div>
-            <div class="im"><img src="imagenes/bebé.jpg" alt="bebe" ></div>
-            <div class="im"><img src="imagenes/casa Juan.jpg" alt="Casa Juan" ></div>
+            <div class="im"><img src="imagenes/bebe.jpg" alt="bebe" ></div>
+            <div class="im"><img src="imagenes/casaJuan.jpg" alt="Casa Juan" ></div>
             <div class="im"><img src="imagenes/CJNT8914.jpg" alt="Yayo y Leo" ></div>
             <div class="im"><img src="imagenes/CRBA7996.jpg" alt="seleccion 4to" ></div>
-            <div class="im"><img src="imagenes/dab con Vaca.jpg" alt="dab" ></div>
+            <div class="im"><img src="imagenes/dabconVaca.jpg" alt="dab" ></div>
             <div class="im"><img src="imagenes/DOFF9229.jpg" alt="Joy" ></div>
             <div class="im"><img src="imagenes/EIUN5658.jpg" alt="Piñata"></div>
             <div class="im"><img src="imagenes/FEWC1384.jpg" alt="Equipo club"></div>
             <div class="im"><img src="imagenes/FKXC1532.jpg" alt="Comiendo"></div>
-            <div class="im"><img src="imagenes/flash emblema.jpg" alt="flash emblema"></div>
+            <div class="im"><img src="imagenes/flashemblema.jpg" alt="flash emblema"></div>
             <div class="im"><img src="imagenes/FLASH.jpg" alt="flash"></div>
-            <div class="im"><img src="imagenes/github foto.jpg" alt="Yo Grande"></div>
-            <div class="im"><img src="imagenes/grupo de danza.jpg" alt="Grupo de danza"></div>
+            <div class="im"><img src="imagenes/githubfoto.jpg" alt="Yo Grande"></div>
+            <div class="im"><img src="imagenes/grupodedanza.jpg" alt="Grupo de danza"></div>
             <div class="im"><img src="imagenes/HGWB6046.jpg" alt="Acapulco"></div>
             <div class="im"><img src="imagenes/IMG_0084.jpg" alt="balon"></div>
             <div class="im"><img src="imagenes/IMG_0091.jpg" alt="Los 4"></div>
@@ -72,14 +72,14 @@
             <div class="im"><img src="imagenes/IMG_E5210.jpg" alt="club de cuervos"></div>
             <div class="im"><img src="imagenes/kinder.jpeg" alt="Kinder"></div>
             <div class="im"><img src="imagenes/lobos.png" alt="Lobos"></div>
-            <div class="im"><img src="imagenes/primera comunión.jpeg" alt="Primera comunion"></div>
+            <div class="im"><img src="imagenes/primeracomunión.jpeg" alt="Primera comunion"></div>
             <div class="im"><img src="imagenes/rayos.jpg" alt="Rayos"></div>
             <div class="im"><img src="imagenes/rayos2.jpg" alt="Rayos 2"></div>
             <div class="im"><img src="imagenes/Ronaldo.jpg" alt="Ronaldo"></div>
             <div class="im"><img src="imagenes/the-flash-concept-art.jpg" alt="Flas corriendo"></div>
             <div class="im"><img src="imagenes/thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
                 alt="yo saltando"></div>
-            <div class="im"><img src="imagenes/yo jaja.jpg" alt="yo posando"></div>
+            <div class="im"><img src="imagenes/yojaja.jpg" alt="yo posando"></div>
         </div>
     </main>
     
