--- a/index.html
+++ b/index.html
@@ -36,50 +36,50 @@
             <li><a href="#">Retos</a></li>
         </ul>
         <div class="imag">
-            <div class="im"><img src="imagenes/bebe 2.jpeg" alt="bebe 2"></div>
-            <div class="im"><img src="imagenes/bebe 3.jpeg" alt="bebe 3" ></div>
-            <div class="im"><img src="imagenes/bebe.jpg" alt="bebe" ></div>
-            <div class="im"><img src="imagenes/casaJuan.jpg" alt="Casa Juan" ></div>
-            <div class="im"><img src="imagenes/CJNT8914.jpg" alt="Yayo y Leo" ></div>
-            <div class="im"><img src="imagenes/CRBA7996.jpg" alt="seleccion 4to" ></div>
-            <div class="im"><img src="imagenes/dabconVaca.jpg" alt="dab" ></div>
-            <div class="im"><img src="imagenes/DOFF9229.jpg" alt="Joy" ></div>
-            <div class="im"><img src="imagenes/EIUN5658.jpg" alt="Piñata"></div>
-            <div class="im"><img src="imagenes/FEWC1384.jpg" alt="Equipo club"></div>
-            <div class="im"><img src="imagenes/FKXC1532.jpg" alt="Comiendo"></div>
-            <div class="im"><img src="imagenes/flashemblema.jpg" alt="flash emblema"></div>
-            <div class="im"><img src="imagenes/FLASH.jpg" alt="flash"></div>
-            <div class="im"><img src="imagenes/githubfoto.jpg" alt="Yo Grande"></div>
-            <div class="im"><img src="imagenes/grupodedanza.jpg" alt="Grupo de danza"></div>
-            <div class="im"><img src="imagenes/HGWB6046.jpg" alt="Acapulco"></div>
-            <div class="im"><img src="imagenes/IMG_0084.jpg" alt="balon"></div>
-            <div class="im"><img src="imagenes/IMG_0091.jpg" alt="Los 4"></div>
-            <div class="im"><img src="imagenes/IMG_0109.jpg" alt="Bale"></div>
-            <div class="im"><img src="imagenes/IMG_0111.jpg" alt="Fondo pantalla"></div>
-            <div class="im"><img src="imagenes/IMG_0644.jpg" alt="Estrella Kelly"></div>
-            <div class="im"><img src="imagenes/IMG_1791.jpg" alt="Yo sentado"></div>
-            <div class="im"><img src="imagenes/IMG_2341.jpg" alt="seleccion 5to"></div>
-            <div class="im"><img src="imagenes/IMG_2380.jpg" alt="XV Mora"></div>
-            <div class="im"><img src="imagenes/IMG_2429.jpg" alt="Emi"></div>
-            <div class="im"><img src="imagenes/IMG_2432.jpg" alt="Volpi"></div>
-            <div class="im"><img src="imagenes/IMG_2447.jpg" alt="bebe saltando"></div>
-            <div class="im"><img src="imagenes/IMG_3774.jpg" alt="Pat"></div>
-            <div class="im"><img src="imagenes/IMG_3978.png" alt="campeones"></div>
-            <div class="im"><img src="imagenes/IMG_4136.jpg" alt="Luis Fer"></div>
-            <div class="im"><img src="imagenes/IMG_4193.jpg" alt="Fenomeno"></div>
-            <div class="im"><img src="imagenes/IMG_5100.jpg" alt="Flas ByN"></div>
-            <div class="im"><img src="imagenes/IMG_E2284.jpg" alt="sportacus"></div>
-            <div class="im"><img src="imagenes/IMG_E5210.jpg" alt="club de cuervos"></div>
-            <div class="im"><img src="imagenes/kinder.jpeg" alt="Kinder"></div>
-            <div class="im"><img src="imagenes/lobos.png" alt="Lobos"></div>
-            <div class="im"><img src="imagenes/primeracomunión.jpeg" alt="Primera comunion"></div>
-            <div class="im"><img src="imagenes/rayos.jpg" alt="Rayos"></div>
-            <div class="im"><img src="imagenes/rayos2.jpg" alt="Rayos 2"></div>
-            <div class="im"><img src="imagenes/Ronaldo.jpg" alt="Ronaldo"></div>
-            <div class="im"><img src="imagenes/the-flash-concept-art.jpg" alt="Flas corriendo"></div>
-            <div class="im"><img src="imagenes/thumbnail_9cb7ac1c-3ef1-4d07-9817-366ce66b7aa5.jpg"
-                alt="yo saltando"></div>
-            <div class="im"><img src="imagenes/yojaja.jpg" alt="yo posando"></div>
+            <div class="im"><img src="imagenes/andrew.jpg" alt="andrew"></div>
+            <div class="im"><img src="imagenes/arrow.jpg" alt="arrow" ></div>
+            <div class="im"><img src="imagenes/astronauta.jpg" alt="astronauta" ></div>
+            <div class="im"><img src="imagenes/atardecer.png" alt="atardecer" ></div>
+            <div class="im"><img src="imagenes/ave.jpg" alt="ave" ></div>
+            <div class="im"><img src="imagenes/bale_champ.png" alt="bale_champ" ></div>
+            <div class="im"><img src="imagenes/BBC.jpg" alt="BBC.jpg" ></div>
+            <div class="im"><img src="imagenes/bbc_champ.jpg" alt="bbc_champ" ></div>
+            <div class="im"><img src="imagenes/Campeones.jpg" alt="Campeones"></div>
+            <div class="im"><img src="imagenes/caricatura.jpg" alt="caricatura"></div>
+            <div class="im"><img src="imagenes/cascadas.jpg" alt="Comiendo"></div>
+            <div class="im"><img src="imagenes/ch14.jpg" alt="ch14"></div>
+            <div class="im"><img src="imagenes/ch15_cr7.png" alt="ch15_cr7"></div>
+            <div class="im"><img src="imagenes/chicha.jpg" alt="chicha"></div>
+            <div class="im"><img src="imagenes/Chicharito.jpg" alt="Chicharito"></div>
+            <div class="im"><img src="imagenes/chilena.jpg" alt="chilena"></div>
+            <div class="im"><img src="imagenes/chivas.jpg" alt="chivas"></div>
+            <div class="im"><img src="imagenes/coca.jpg" alt="coca"></div>
+            <div class="im"><img src="imagenes/cris7.jpg" alt="cris7"></div>
+            <div class="im"><img src="imagenes/cristiano.jpg" alt="cristiano"></div>
+            <div class="im"><img src="imagenes/dc.jpg" alt="dc"></div>
+            <div class="im"><img src="imagenes/flash1.jpg" alt="flash1"></div>
+            <div class="im"><img src="imagenes/flash2.jpg" alt="flash2"></div>
+            <div class="im"><img src="imagenes/Home.jpg" alt="Home"></div>
+            <div class="im"><img src="imagenes/infinity_war.jpg" alt="infinity_war"></div>
+            <div class="im"><img src="imagenes/3spider.jpg" alt="3spider"></div>
+            <div class="im"><img src="imagenes/kroos.jpg" alt="kroos"></div>
+            <div class="im"><img src="imagenes/kylian.jpg" alt="kylian"></div>
+            <div class="im"><img src="imagenes/lobo.jpg" alt="lobo"></div>
+            <div class="im"><img src="imagenes/maldivas.jpg" alt="maldivas"></div>
+            <div class="im"><img src="imagenes/mjolnir.png" alt="mjolnir"></div>
+            <div class="im"><img src="imagenes/montañas.jpg" alt="montañas"></div>
+            <div class="im"><img src="imagenes/oso-flash.jpg" alt="oso-flash"></div>
+            <div class="im"><img src="imagenes/playa.jpg" alt="playa"></div>
+            <div class="im"><img src="imagenes/real_madrid.jpg" alt="real_madrid"></div>
+            <div class="im"><img src="imagenes/sergio.jpg" alt="sergio"></div>
+            <div class="im"><img src="imagenes/sol.png" alt="sol"></div>
+            <div class="im"><img src="imagenes/SR4.jpg" alt="SR4"></div>
+            <div class="im"><img src="imagenes/stormbraker.jpg" alt="stormbraker"></div>
+            <div class="im"><img src="imagenes/superman.jpg" alt="superman"></div>
+            <div class="im"><img src="imagenes/thor.jpg" alt="thor"></div>
+            <div class="im"><img src="imagenes/volcan.jpg"
+                alt="volcan"></div>
+            <div class="im"><img src="imagenes/wolf.jpg" alt="wolf"></div>
         </div>
     </main>
     
