--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#">Retos</a></li>
         </ul>
         <div id="imagenes">
-            <div>
+            <div class="new-imag">
                 <img src="imagenes/andrew.jpg" alt="andrew">
                 <img src="imagenes/arrow.jpg" alt="arrow" >
                 <img src="imagenes/astronauta.jpg" alt="astronauta" >
@@ -84,6 +84,7 @@
                 <img src="imagenes/thor.jpg" alt="thor">
                 <img src="imagenes/volcan.jpg" alt="volcan">
                 <img src="imagenes/wolf.jpg" alt="wolf">
+                <img src="imagenes/star_wars.jpg" alt="star_wars">
             </div>
         </div>
     </main>
