--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
             <li style="margin: 2%;"><a href="#">Lo más visto</a></li>
             <li style="margin: 2%;"><a href="#">Retos</a></li>
         </ul>
-        <div id="imagenes">
-            <div class="new-imag">
+
+        <section class="row">
+            <div class="column">
                 <img src="imagenes/andrew.jpg" alt="andrew">
                 <img src="imagenes/arrow.jpg" alt="arrow" >
                 <img src="imagenes/astronauta.jpg" alt="astronauta" >
@@ -49,6 +50,8 @@
                 <img src="imagenes/bale_champ.png" alt="bale_champ" >
                 <img src="imagenes/BBC.jpg" alt="BBC.jpg" >
                 <img src="imagenes/bbc_champ.jpg" alt="bbc_champ" >
+            </div>
+            <div class="column">
                 <img src="imagenes/Campeones.jpg" alt="Campeones">
                 <img src="imagenes/caricatura.jpg" alt="caricatura">
                 <img src="imagenes/cascadas.jpg" alt="Comiendo">
@@ -57,6 +60,8 @@
                 <img src="imagenes/chicha.jpg" alt="chicha">
                 <img src="imagenes/Chicharito.jpg" alt="Chicharito">
                 <img src="imagenes/chilena.jpg" alt="chilena">
+            </div>
+            <div class="column">
                 <img src="imagenes/chivas.jpg" alt="chivas">
                 <img src="imagenes/coca.jpg" alt="coca">
                 <img src="imagenes/cris7.jpg" alt="cris7">
@@ -65,7 +70,8 @@
                 <img src="imagenes/flash1.jpg" alt="flash1">
                 <img src="imagenes/flash2.jpg" alt="flash2">
                 <img src="imagenes/Home.jpg" alt="Home">
-                <img src="imagenes/infinity_war.jpg" alt="infinity_war">
+            </div>
+            <div class="column">
                 <img src="imagenes/3spider.jpg" alt="3spider">
                 <img src="imagenes/kroos.jpg" alt="kroos">
                 <img src="imagenes/kylian.jpg" alt="kylian">
@@ -74,6 +80,8 @@
                 <img src="imagenes/mjolnir.png" alt="mjolnir">
                 <img src="imagenes/montañas.jpg" alt="montañas">
                 <img src="imagenes/oso-flash.jpg" alt="oso-flash">
+            </div>
+            <div class="column">
                 <img src="imagenes/playa.jpg" alt="playa">
                 <img src="imagenes/real_madrid.jpg" alt="real_madrid">
                 <img src="imagenes/sergio.jpg" alt="sergio">
@@ -82,11 +90,15 @@
                 <img src="imagenes/stormbraker.jpg" alt="stormbraker">
                 <img src="imagenes/superman.jpg" alt="superman">
                 <img src="imagenes/thor.jpg" alt="thor">
+            </div>
+            <div class="column">
+                <img src="imagenes/infinity_war.jpg" alt="infinity_war">
                 <img src="imagenes/volcan.jpg" alt="volcan">
                 <img src="imagenes/wolf.jpg" alt="wolf">
                 <img src="imagenes/star_wars.jpg" alt="star_wars">
             </div>
-        </div>
+        </section>
+
     </main>
     
 </body>
