--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
                 <img src="imagenes/volcan.jpg" alt="volcan">
                 <img src="imagenes/wolf.jpg" alt="wolf">
                 <img src="imagenes/star_wars.jpg" alt="star_wars">
+                <img src="imagenes/rock.jpg" alt="rock">
+                <img src="imagenes/patito.jpg" alt="patito">
+                <img src="imagenes/perrito.jpg" alt="perrito">
+                <img src="imagenes/spidercaricatura.jpg" alt="spidercaricatura">
             </div>
         </section>
 
