--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="navbar.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -39,6 +40,17 @@
             <li style="margin: 2%;"><a href="#">Lo más visto</a></li>
             <li style="margin: 2%;"><a href="#">Retos</a></li>
         </ul>
+
+        <div class="trending">
+            <p class="p-trending">Fotos de stock gratis</p>
+            <div class="button-trending">
+                <p>Tendencias</p>
+                <button class="expand-button"><span class="material-icons-outlined">arrow_drop_down</span>
+                </button>
+            </div>
+        </div>
+
+
 
         <section class="row">
             <div class="column">
